[SW-457] Clean up windows scripts